2023-11-24 카피덱 id값 입력

--- a/03_mission/01/about.html
+++ b/03_mission/01/about.html
@@ -29,20 +29,20 @@
 		</header>
 		<section class="mission_about gap">
 			<div class="about_title">
-				<div class="about_floor">GF</div>
-				<h2>스타일러 시향 체험</h2>
-				<p>다양한 향을 직접 느껴보고, 향기로운 스타일러 의류관리도 경험해보세요. 가장 마음에드는 향의 QR코드를 스캔하면 미션을 완료할 수 있습니다.</p>
+				<div id="m01_a_01" class="about_floor">GF</div>
+				<h2 id="m01_a_02">스타일러 시향 체험</h2>
+				<p id="m01_a_03">다양한 향을 직접 느껴보고, 향기로운 스타일러 의류관리도 경험해보세요. 가장 마음에드는 향의 QR코드를 스캔하면 미션을 완료할 수 있습니다.</p>
 			</div>
 			<div class="about_howto">
-				<h3>체험방법</h3>
+				<h3 id="m01_a_04">체험방법</h3>
 				<ul>
 					<li>
 						<div class="img_wrap">
 							<img src="../../image/03_mission/m01_step01.png" alt="mission 1 step 1">
 						</div>
 						<div class="about_step">
-							<h4>STEP. 1</h4>
-							<p>4가지 매력적인 아로마 시트를 시향해 보세요.</p>
+							<h4 id="m01_a_05">STEP. 1</h4>
+							<p id="m01_a_06">4가지 매력적인 아로마 시트를 시향해 보세요.</p>
 						</div>
 					</li>
 					<li>
@@ -50,8 +50,8 @@
 							<img src="../../image/03_mission/m01_step02.png" alt="mission 1 step 2">
 						</div>
 						<div class="about_step">
-							<h4>STEP. 2</h4>
-							<p>마음에 드는 향을 고르고 QR코드를 스캔해보세요.</p>
+							<h4 id="m01_a_07">STEP. 2</h4>
+							<p id="m01_a_08">마음에 드는 향을 고르고 QR코드를 스캔해보세요.</p>
 						</div>
 					</li>
 					<li>
@@ -59,8 +59,8 @@
 							<img src="../../image/03_mission/m01_step03.png" alt="mission 1 step 3">
 						</div>
 						<div class="about_step">
-							<h4>STEP. 3</h4>
-							<p>스텝에게 선택한 향을 보여주고 스타일러/슈케이스도 직접 체험해보세요.</p>
+							<h4 id="m01_a_09">STEP. 3</h4>
+							<p id="m01_a_10">스텝에게 선택한 향을 보여주고 스타일러/슈케이스도 직접 체험해보세요.</p>
 						</div>
 					</li>
 				</ul>
