--- a/03_mission/01/scan_list.html
+++ b/03_mission/01/scan_list.html
@@ -51,18 +51,18 @@
 	<div id="m01_scan_clear_1" class="popup_wrap blur_pop">
 		<div class="blur_bg active"></div>
 		<div class="pop_content">
-			<div class="mission_clear"><img src="../../image/common/icn_mission_s.svg" alt="">Clear!</div>
+			<div id="m01_s_02" class="mission_clear"><img src="../../image/common/icn_mission_s.svg" alt="">Clear!</div>
 			
 			<!-- 시향 1 -->
-			<h2>윌 유 메리미를 선택하셨네요!</h2>
-			<p>사랑과 만남을 모티브로 한 경쾌하고 <br />
+			<h2 id="m01_s_03">윌 유 메리미를 선택하셨네요!</h2>
+			<p id="m01_s_04">사랑과 만남을 모티브로 한 경쾌하고 <br />
 				발랄한 분위기의 상큼하고 사랑스러운 향.<br />
 				윌 유 메리미 향으로 스타일러/슈케어를 경험해보세요.
 			</p>
 			<!-- 시향 1 end -->
 			
 			<div class="pop_bottom_btns w90per">
-				<p>확인 버튼을 누르기 전 <br />
+				<p id="m01_s_05">확인 버튼을 누르기 전 <br />
 					운영 스텝에게 화면을 보여주세요.</p>
 				<button onclick="location.href='../board_list_02.html'" id="btn_m01_close" class="ok_circle btn_pop_circle">닫기</button>
 			</div>
@@ -73,17 +73,17 @@
 	<div id="m01_scan_clear_2" class="popup_wrap blur_pop">
 		<div class="blur_bg active"></div>
 		<div class="pop_content">
-			<div class="mission_clear"><img src="../../image/common/icn_mission_s.svg" alt="">Clear!</div>
+			<div id="m01_s_02" class="mission_clear"><img src="../../image/common/icn_mission_s.svg" alt="">Clear!</div>
 
 			<!-- 시향 2 -->
-			<h2>라임 바질 & 만다린을 선택하셨네요!</h2>
-			<p>톡 쏘는 라임과 싱그러운 바질향이 조화로운 <br />상쾌하면서도 깔끔한 시트러스향. <br />
+			<h2 id="m01_s_06">라임 바질 & 만다린을 선택하셨네요!</h2>
+			<p id="m01_s_07">톡 쏘는 라임과 싱그러운 바질향이 조화로운 <br />상쾌하면서도 깔끔한 시트러스향. <br />
 				라임 바질 & 만다린 향으로 스타일러/슈케어를 경험해보세요.
 			</p>
 			<!-- 시향 2 end -->
 			
 			<div class="pop_bottom_btns w90per">
-				<p>확인 버튼을 누르기 전 <br />
+				<p id="m01_s_05">확인 버튼을 누르기 전 <br />
 					운영 스텝에게 화면을 보여주세요.</p>
 				<button onclick="location.href='../board_list_02.html'" id="btn_m01_close" class="ok_circle btn_pop_circle">닫기</button>
 			</div>
@@ -94,16 +94,16 @@
 	<div id="m01_scan_clear_3" class="popup_wrap blur_pop">
 		<div class="blur_bg active"></div>
 		<div class="pop_content">
-			<div class="mission_clear"><img src="../../image/common/icn_mission_s.svg" alt="">Clear!</div>
+			<div id="m01_s_02" class="mission_clear"><img src="../../image/common/icn_mission_s.svg" alt="">Clear!</div>
 
 			<!-- 시향 3 -->
-			<h2>페어 & 프리지아를 선택하셨네요!</h2>
-			<p>신선한 잉글리시 페어와 순수한 프리지아향이 <br />어우러진 깨끗하고 부드러운 플로럴향. <br />페어 & 프리지아 향으로 스타일러/슈케어를 경험해보세요.
+			<h2 id="m01_s_08">페어 & 프리지아를 선택하셨네요!</h2>
+			<p id="m01_s_09">신선한 잉글리시 페어와 순수한 프리지아향이 <br />어우러진 깨끗하고 부드러운 플로럴향. <br />페어 & 프리지아 향으로 스타일러/슈케어를 경험해보세요.
 			</p>
 			<!-- 시향 3 end -->
 			
 			<div class="pop_bottom_btns w90per">
-				<p>확인 버튼을 누르기 전 <br />
+				<p id="m01_s_05">확인 버튼을 누르기 전 <br />
 					운영 스텝에게 화면을 보여주세요.</p>
 				<button onclick="location.href='../board_list_02.html'" id="btn_m01_close" class="ok_circle btn_pop_circle">닫기</button>
 			</div>
@@ -114,16 +114,16 @@
 	<div id="m01_scan_clear_4" class="popup_wrap blur_pop">
 		<div class="blur_bg active"></div>
 		<div class="pop_content">
-			<div class="mission_clear"><img src="../../image/common/icn_mission_s.svg" alt="">Clear!</div>
+			<div id="m01_s_02" class="mission_clear"><img src="../../image/common/icn_mission_s.svg" alt="">Clear!</div>
 
 			<!-- 시향 4 -->
-			<h2>자스민 블루를 선택하셨네요!</h2>
-			<p>우아한 로즈와 깊은 자스민 향이 <br />어우러져 포근함이 느껴지는 플로럴 머스크향. <br />자스민 블루 향으로 스타일러/슈케어를 경험해보세요.
+			<h2 id="m01_s_10">자스민 블루를 선택하셨네요!</h2>
+			<p id="m01_s_11">우아한 로즈와 깊은 자스민 향이 <br />어우러져 포근함이 느껴지는 플로럴 머스크향. <br />자스민 블루 향으로 스타일러/슈케어를 경험해보세요.
 			</p>
 			<!-- 시향 4 end -->
 			
 			<div class="pop_bottom_btns w90per">
-				<p>확인 버튼을 누르기 전 <br />
+				<p id="m01_s_05">확인 버튼을 누르기 전 <br />
 					운영 스텝에게 화면을 보여주세요.</p>
 				<button onclick="location.href='../board_list_02.html'" id="btn_m01_close" class="ok_circle btn_pop_circle">닫기</button>
 			</div>
@@ -134,16 +134,16 @@
 	<div id="m01_scan_clear_5" class="popup_wrap blur_pop">
 		<div class="blur_bg active"></div>
 		<div class="pop_content">
-			<div class="mission_clear"><img src="../../image/common/icn_mission_s.svg" alt="">Clear!</div>
+			<div id="m01_s_02" class="mission_clear"><img src="../../image/common/icn_mission_s.svg" alt="">Clear!</div>
 
 			<!-- 시향 5 -->
-			<h2>플로랄 프루티를 선택하셨네요!</h2>
-			<p>과일향과 플로랄의 적절한 배합으로 <br />가볍고 경쾌하며 대중성 있는 향. <br />플로랄 프루티 향으로 스타일러/슈케어를 경험해보세요.
+			<h2 id="m01_s_12">플로랄 프루티를 선택하셨네요!</h2>
+			<p id="m01_s_13">과일향과 플로랄의 적절한 배합으로 <br />가볍고 경쾌하며 대중성 있는 향. <br />플로랄 프루티 향으로 스타일러/슈케어를 경험해보세요.
 			</p>
 			<!-- 시향 5 end -->
 			
 			<div class="pop_bottom_btns w90per">
-				<p>확인 버튼을 누르기 전 <br />
+				<p id="m01_s_05">확인 버튼을 누르기 전 <br />
 					운영 스텝에게 화면을 보여주세요.</p>
 				<button onclick="location.href='../board_list_02.html'" id="btn_m01_close" class="ok_circle btn_pop_circle">닫기</button>
 			</div>
@@ -154,16 +154,16 @@
 	<div id="m01_scan_clear_6" class="popup_wrap blur_pop">
 		<div class="blur_bg active"></div>
 		<div class="pop_content">
-			<div class="mission_clear"><img src="../../image/common/icn_mission_s.svg" alt="">Clear!</div>
+			<div id="m01_s_02" class="mission_clear"><img src="../../image/common/icn_mission_s.svg" alt="">Clear!</div>
 
 			<!-- 시향 6 -->
-			<h2>오리엔탈 구어망드를 선택하셨네요!</h2>
-			<p>너무 무겁지 않고 트렌디한 <br />달콤함을 가진 오리엔탈 방향. <br />오리엔탈 구어망드 향으로 스타일러/슈스케어를 경험해보세요.
+			<h2 id="m01_s_14">오리엔탈 구어망드를 선택하셨네요!</h2>
+			<p id="m01_s_15">너무 무겁지 않고 트렌디한 <br />달콤함을 가진 오리엔탈 방향. <br />오리엔탈 구어망드 향으로 스타일러/슈스케어를 경험해보세요.
 			</p>
 			<!-- 시향 6 end -->
 			
 			<div class="pop_bottom_btns w90per">
-				<p>확인 버튼을 누르기 전 <br />
+				<p id="m01_s_05">확인 버튼을 누르기 전 <br />
 					운영 스텝에게 화면을 보여주세요.</p>
 				<button onclick="location.href='../board_list_02.html'" id="btn_m01_close" class="ok_circle btn_pop_circle">닫기</button>
 			</div>
