--- a/03_mission/02/about.html
+++ b/03_mission/02/about.html
@@ -29,22 +29,22 @@
 		</header>
 		<section class="mission_about gap">
 			<div class="about_title">
-				<div class="about_floor">1F</div>
-				<h2>My Objet Color</h2>
-				<p>다양한 오브제 컬렉션 컬러 패널을 활용해 <br />
+				<div id="m02_a_01" class="about_floor">1F</div>
+				<h2 id="m02_a_02">My Objet Color</h2>
+				<p id="m02_a_03">다양한 오브제 컬렉션 컬러 패널을 활용해 <br />
 					나만의 스타일로 조합을 만들 수 있어요.<br />
 					조합을 만들고 촬영하면 미션을 완료할 수 있어요.</p>
 			</div>
 			<div class="about_howto">
-				<h3>체험방법</h3>
+				<h3 id="m02_a_04">체험방법</h3>
 				<ul>
 					<li>
 						<div class="img_wrap">
 							<img src="../../image/03_mission/m02_step01.png" alt="mission 2 step 1">
 						</div>
 						<div class="about_step">
-							<h4>STEP. 1</h4>
-							<p>다양한 오브제 컬렉션 컬러를 <br />
+							<h4 id="m02_a_05">STEP. 1</h4>
+							<p id="m02_a_06">다양한 오브제 컬렉션 컬러를 <br />
 								직접 체험해보세요.</p>
 						</div>
 					</li>
@@ -53,8 +53,8 @@
 							<img src="../../image/03_mission/m02_step02.png" alt="mission 2 step 2">
 						</div>
 						<div class="about_step">
-							<h4>STEP. 2</h4>
-							<p>원하는 컬러로 패널에 부착해보세요.</p>
+							<h4 id="m02_a_07">STEP. 2</h4>
+							<p id="m02_a_08">원하는 컬러로 패널에 부착해보세요.</p>
 						</div>
 					</li>
 					<li>
@@ -62,8 +62,8 @@
 							<img src="../../image/03_mission/m02_step03.png" alt="mission 2 step 3">
 						</div>
 						<div class="about_step">
-							<h4>STEP. 3</h4>
-							<p>나만의 조합을 <br />
+							<h4 id="m02_a_09">STEP. 3</h4>
+							<p id="m02_a_10">나만의 조합을 <br />
 								가이드에 맞춰 촬영해보세요.</p>
 						</div>
 					</li>
