--- a/03_mission/02/scan02.html
+++ b/03_mission/02/scan02.html
@@ -33,25 +33,26 @@
 		</section>
 	</div>
 	<!-- 촬영 완료시 노출 팝업 -->
+	<!-- id값 부여는 scan_list.html과 겹치는 텍스트가 많아 scan_list.html에 있던 id값 그대로 가져왔습니다. -->
 	<div id="m02_scan_clear" class="popup_wrap blur_pop" style="display: flex;">
 		<div class="blur_bg active"></div>
 		<div class="pop_content">
-			<div class="mission_clear"><img src="../../image/common/icn_mission_s.svg" alt="">Clear!</div>
-			<h2>나만의 컬러 조합을 확인했습니다.</h2>
-			<p>여러분의 의견을 바탕으로<br />
+			<div id="m02_s_02" class="mission_clear"><img src="../../image/common/icn_mission_s.svg" alt="">Clear!</div>
+			<h2 id="m02_s_03">나만의 컬러 조합을 확인했습니다.</h2>
+			<p id="m02_s_04">여러분의 의견을 바탕으로<br />
 				새로운 제품이 론칭될 예정이에요.</p>
 			<ul class="m02_color_list">
 				<li>
 					<figure class="color_m_pink"></figure>
-					<p>[MIST]<br />PINK</p>
+					<p id="m02_s_20">[MIST]<br />PINK</p>
 				</li>
 				<li>
 					<figure class="color_n_creamwhite"></figure>
-					<p>[NATURE]<br />CREAM WHITE</p>
+					<p id="m02_s_16">[NATURE]<br />CREAM WHITE</p>
 				</li>
 				<li>
 					<figure class="color_s_midnight"></figure>
-					<p>[SOLID]<br />MANHATTAN MIDNIGHT</p>
+					<p id="m02_s_08">[SOLID]<br />MANHATTAN MIDNIGHT</p>
 				</li>
 			</ul>
 			<div class="pop_bottom_btns">
