--- a/03_mission/02/scan_list.html
+++ b/03_mission/02/scan_list.html
@@ -39,97 +39,96 @@
 	<div id="m02_scan_clear" class="popup_wrap blur_pop" style="display: flex; height: auto;">
 		<div class="blur_bg active"></div>
 		<div class="pop_content" style="height: auto;">
-			<div class="mission_clear"><img src="../../image/common/icn_mission_s.svg" alt="">Clear!</div>
-			<h2>나만의 컬러 조합을 확인했습니다.</h2>
-			<p>여러분의 의견을 바탕으로<br />
+			<div id="m02_s_02" class="mission_clear"><img src="../../image/common/icn_mission_s.svg" alt="">Clear!</div>
+			<h2 id="m02_s_03">나만의 컬러 조합을 확인했습니다.</h2>
+			<p id="m02_s_04">여러분의 의견을 바탕으로<br />
 				새로운 제품이 론칭될 예정이에요.</p>
 			<ul class="m02_color_list" style="flex-wrap: wrap;">
 				<!-- 21개 색상 목록 -->
 				<li>
 					<figure class="color_p_botanic"></figure>
-					<p>[FENIX]<br />BOTANIC</p>
+					<p id="m02_s_05">[FENIX]<br />BOTANIC</p>
 				</li>
 				<li>
 					<figure class="color_p_sand"></figure>
-					<p>[FENIX]<br />SAND</p>
+					<p id="m02_s_06">[FENIX]<br />SAND</p>
 				</li>
 				<li>
 					<figure class="color_p_stone"></figure>
-					<p>[FENIX]<br />STONE</p>
+					<p id="m02_s_07">[FENIX]<br />STONE</p>
 				</li>
 				<li>
 					<figure class="color_s_midnight"></figure>
-					<p>[SOLID]<br />MANHATTAN MIDNIGHT</p>
+					<p id="m02_s_08">[SOLID]<br />MANHATTAN MIDNIGHT</p>
 				</li>
 				<li>
 					<figure class="color_s_silver"></figure>
-					<p>[SOLID]<br />SILVER</p>
+					<p id="m02_s_09">[SOLID]<br />SILVER</p>
 				</li>
 				<li>
 					<figure class="color_s_green"></figure>
-					<p>[SOLID]<br />GREEN</p>
+					<p id="m02_s_10">[SOLID]<br />GREEN</p>
 				</li>
 				<li>
 					<figure class="color_st_claypink"></figure>
-					<p>[STONE]<br />CLAY PINK</p>
+					<p id="m02_s_11">[STONE]<br />CLAY PINK</p>
 				</li>
 				<li>
 					<figure class="color_st_silver"></figure>
-					<p>[STONE]<br />SILVER</p>
+					<p id="m02_s_12">[STONE]<br />SILVER</p>
 				</li>
 				<li>
 					<figure class="color_n_white"></figure>
-					<p>[NATURE]<br />WHITE</p>
+					<p id="m02_s_13">[NATURE]<br />WHITE</p>
 				</li>
 				<li>
 					<figure class="color_n_gray"></figure>
-					<p>[NATURE]<br />GRAY</p>
+					<p id="m02_s_14">[NATURE]<br />GRAY</p>
 				</li>
 				<li>
 					<figure class="color_n_black"></figure>
-					<p>[NATURE]<br />BLACK</p>
+					<p id="m02_s_15">[NATURE]<br />BLACK</p>
 				</li>
 				<li>
 					<figure class="color_n_creamwhite"></figure>
-					<p>[NATURE]<br />CREAM WHITE</p>
+					<p id="m02_s_16">[NATURE]<br />CREAM WHITE</p>
 				</li>
 				<li>
 					<figure class="color_n_creamgray"></figure>
-					<p>[NATURE]<br />CREAM GRAY</p>
+					<p id="m02_s_17">[NATURE]<br />CREAM GRAY</p>
 				</li>
 				<li>
 					<figure class="color_n_navy"></figure>
-					<p>[NATURE]<br />NAVY</p>
+					<p id="m02_s_18">[NATURE]<br />NAVY</p>
 				</li>
 				<li>
 					<figure class="color_m_beige"></figure>
-					<p>[MIST]<br />BEIGE</p>
+					<p id="m02_s_19">[MIST]<br />BEIGE</p>
 				</li>
 				<li>
 					<figure class="color_m_pink"></figure>
-					<p>[MIST]<br />PINK</p>
+					<p id="m02_s_20">[MIST]<br />PINK</p>
 				</li>
 				<li>
 					<figure class="color_m_creamsky"></figure>
-					<p>[MIST]<br />CREAM SKY</p>
+					<p id="m02_s_21">[MIST]<br />CREAM SKY</p>
 				</li>
 				<li>
 					<figure class="color_m_creamwhite"></figure>
-					<p>[MIST]<br />CREAM WHITE</p>
+					<p id="m02_s_22">[MIST]<br />CREAM WHITE</p>
 				</li>
 				<li>
 					<figure class="color_m_claypink"></figure>
-					<p>[MIST]<br />CLAY PINK</p>
+					<p id="m02_s_23">[MIST]<br />CLAY PINK</p>
 				</li>
 				<li>
 					<figure class="color_m_claymint"></figure>
-					<p>[MIST]<br />CLAY MINT</p>
+					<p id="m02_s_24">[MIST]<br />CLAY MINT</p>
 				</li>
 				<li>
 					<figure class="color_m_claybrown"></figure>
-					<p>[MIST]<br />CLAY BROWN</p>
+					<p id="m02_s_25">[MIST]<br />CLAY BROWN</p>
 				</li>
-				
 				
 			</ul>
 			<!-- <div class="pop_bottom_btns">
