--- a/03_mission/03/about.html
+++ b/03_mission/03/about.html
@@ -29,21 +29,21 @@
 		</header>
 		<section class="mission_about gap">
 			<div class="about_title">
-				<div class="about_floor">1F</div>
-				<h2>오브제갤러리 제품 월드컵</h2>
-				<p>공간 인테리어를 위한 가전 오브제 컬렉션을 만나보고, <br />
+				<div id="m03_a_01" class="about_floor">1F</div>
+				<h2 id="m03_a_02">오브제갤러리 제품 월드컵</h2>
+				<p id="m03_a_03">공간 인테리어를 위한 가전 오브제 컬렉션을 만나보고, <br />
 					나의 취향에 꼭 맞는 가전을 찾아보세요.</p>
 			</div>
 			<div class="about_howto">
-				<h3>체험방법</h3>
+				<h3 id="m03_a_04">체험방법</h3>
 				<ul>
 					<li>
 						<div class="img_wrap">
 							<img src="../../image/03_mission/m03_step01.png" alt="mission 3 step 1">
 						</div>
 						<div class="about_step">
-							<h4>STEP. 1</h4>
-							<p>오브제 갤러리를 관람해보세요.</p>
+							<h4 id="m03_a_05">STEP. 1</h4>
+							<p id="m03_a_06">오브제 갤러리를 관람해보세요.</p>
 						</div>
 					</li>
 					<li>
@@ -51,8 +51,8 @@
 							<img src="../../image/03_mission/m03_step02.png" alt="mission 3 step 2">
 						</div>
 						<div class="about_step">
-							<h4>STEP. 2</h4>
-							<p>My Object House에서 <br />
+							<h4 id="m03_a_07">STEP. 2</h4>
+							<p id="m03_a_08">My Object House에서 <br />
 								가전테리어를 직접 경험하세요.</p>
 						</div>
 					</li>
@@ -61,8 +61,8 @@
 							<img src="../../image/03_mission/m03_step03.png" alt="mission 3 step 3">
 						</div>
 						<div class="about_step">
-							<h4>STEP. 3</h4>
-							<p>경험을 기반으로 <br />
+							<h4 id="m03_a_09">STEP. 3</h4>
+							<p id="m03_a_10">경험을 기반으로 <br />
 								나의 픽 가전을 찾아보세요.</p>
 						</div>
 					</li>
