--- a/03_mission/03/worldcup.html
+++ b/03_mission/03/worldcup.html
@@ -29,29 +29,29 @@
 		</header>
 		<section class="worldcup_sec gap">
 			<div class="worldcup_title">
-				<h2>18강</h2>
-				<b>1/9</b>
-				<p>어떤 가전이 나의 취향인지 선택해주세요.</p>
+				<h2 id="m03_s_001">18강</h2>
+				<b id="m03_s_002">1/9</b>
+				<p id="m03_s_003">어떤 가전이 나의 취향인지 선택해주세요.</p>
 			</div>
 			<div class="worldcup_list">
 				<!-- 월드컵 기능 간략 설명
 				18강 -> 2번 후 16강으로 이동 -> 8강 -> 4강 -> 결승 -> 완료 팝업 노출.
 				각 월드컵 제품은 랜덤 노출 됩니다. -->
-				<button onclick="" class="worldcup_item active_toggle">
-					<span class="img_wrap"><img src="../../image/03_mission/img_worldcup_01.png" alt="LG Styler image"></span>
+				<button id="m03_item_18" type="button" onclick="popupOpen('m03_scan_clear_img_18')" ontouchstart="popupOpen('m03_scan_clear_img_18')" class="worldcup_item active_toggle">
+					<span class="img_wrap"><img src="../../image/03_mission/img_18_LG_Styler.png" alt="LG Styler"></span>
 					<span class="txt_wrap">
-						<h3>LG Styler</h3>
-						<p>매번 세탁소에 가지 않아도<br />
+						<h3 id="m03_s_048">LG Styler</h3>
+						<p id="m03_s_049">매번 세탁소에 가지 않아도<br />
 							깔끔하고 우아한 스타일</p>
 					</span>
 				</button>
-				<button onclick="" class="worldcup_item active_toggle">
-					<span class="img_wrap"><img src="../../image/03_mission/img_worldcup_02.png" alt="LG Tiiun image"></span>
+				<button id="m03_item_14" type="button" onclick="popupOpen('m03_scan_clear_img_14')" ontouchstart="popupOpen('m03_scan_clear_img_14')" class="worldcup_item active_toggle">
+					<span class="img_wrap"><img src="../../image/03_mission/img_14_LG_Tiiun.png" alt=""></span>
 					<span class="txt_wrap">
-						<h3>LG Tiiun</h3>
-						<p>쉽게 키우는<br />
+						<h3 id="m03_s_037">LG Tiiun</h3>
+						<p id="m03_s_038">쉽게 키우는<br />
 							나만의 작은 정원</p>
-						<span class="minitxt">*출시예정</span>
+						<span id="m03_s_039" class="minitxt">*출시예정</span>
 					</span>
 				</button>
 			</div>
