--- a/03_mission/04/about.html
+++ b/03_mission/04/about.html
@@ -29,20 +29,20 @@
 		</header>
 		<section class="mission_about gap">
 			<div class="about_title">
-				<div class="about_floor">3F</div>
-				<h2>숨은 QR 찾기</h2>
-				<p>3F에 진열된 미니어쳐 제품들 사이에서 숨겨진 QR 코드를 찾아보세요. QR 코드를 스캔하면 LG 홈페이지로 이동하며 확인한 후 다시 돌아오면 미션을 완료할 수 있어요.</p>
+				<div class="about_floor" id="m_04_a_1">3F</div>
+				<h2 id="m_04_a_2">숨은 QR 찾기</h2>
+				<p id="m_04_a_3">3F에 진열된 미니어쳐 제품들 사이에서 숨겨진 QR 코드를 찾아보세요. QR 코드를 스캔하면 LG 홈페이지로 이동하며 확인한 후 다시 돌아오면 미션을 완료할 수 있어요.</p>
 			</div>
 			<div class="about_howto">
-				<h3>체험방법</h3>
+				<h3 id="m_04_a_4">체험방법</h3>
 				<ul>
 					<li>
 						<div class="img_wrap">
 							<img src="../../image/03_mission/m04_step01.png" alt="mission 4 step 1">
 						</div>
 						<div class="about_step">
-							<h4>STEP. 1</h4>
-							<p>3층에 진열된 제품을 구경해세요.</p>
+							<h4 id="m_04_a_5">STEP. 1</h4>
+							<p id="m_04_a_6">3층에 진열된 제품을 구경해세요.</p>
 						</div>
 					</li>
 					<li>
@@ -50,8 +50,8 @@
 							<img src="../../image/03_mission/m04_step02.png" alt="mission 4 step 2">
 						</div>
 						<div class="about_step">
-							<h4>STEP. 2</h4>
-							<p>숨겨진 QR코드를 찾고 <br />
+							<h4 id="m_04_a_7">STEP. 2</h4>
+							<p id="m_04_a_8">숨겨진 QR코드를 찾고 <br />
 								버튼을 눌러 스캔해보세요.</p>
 						</div>
 					</li>
@@ -60,8 +60,8 @@
 							<img src="../../image/03_mission/m04_step03.png" alt="mission 4 step 3">
 						</div>
 						<div class="about_step">
-							<h4>STEP. 3</h4>
-							<p>LG 홈페이지를 탐색해보세요.</p>
+							<h4 id="m_04_a_9">STEP. 3</h4>
+							<p id="m_04_a_10">LG 홈페이지를 탐색해보세요.</p>
 						</div>
 					</li>
 					<li>
@@ -69,8 +69,8 @@
 							<img src="../../image/03_mission/m04_step04.png" alt="mission 4 step 4">
 						</div>
 						<div class="about_step">
-							<h4>STEP. 4</h4>
-							<p>페이지로 돌아와서 <br />
+							<h4 id="m_04_a_11">STEP. 4</h4>
+							<p id="m_04_a_12">페이지로 돌아와서 <br />
 								확인 버튼을 누르세요.</p>
 						</div>
 					</li>
