--- a/03_mission/04/scan.html
+++ b/03_mission/04/scan.html
@@ -43,7 +43,7 @@
 	<div id="m04_scan_close" class="popup_wrap blur_pop">
 		<div class="blur_bg"></div>
 		<div class="pop_content">
-			<h2>QR코드 확인이 불가합니다. <br />
+			<h2 id="m_04_s_4">QR코드 확인이 불가합니다. <br />
 				숨겨진 QR코드를 찾아 스캔해주세요.</h2>
 			<div class="pop_bottom_btns">
 				<button onclick="popClose()" id="btn_m04_close" class="close_circle btn_pop_circle">닫기</button>
@@ -55,9 +55,9 @@
 	<div id="m04_scan_clear" class="popup_wrap blur_pop" style="display: flex;">
 		<div class="blur_bg active"></div>
 		<div class="pop_content">
-			<div class="mission_clear"><img src="../../image/common/icn_mission_s.svg" alt="">Clear!</div>
-			<h2>숨겨진 QR코드를 발견하셨네요!</h2>
-			<p>LG 홈페이지에서는<br />
+			<div class="mission_clear" id="m_04_s_1"><img src="../../image/common/icn_mission_s.svg" alt="">Clear!</div>
+			<h2 id="m_04_s_2">숨겨진 QR코드를 발견하셨네요!</h2>
+			<p id="m_04_s_3">LG 홈페이지에서는<br />
 				최신 LG 가전 제품 정보를 찾고 비교할 수 있으며,<br />
 				제품 구매나 기술 지원과 같은 도움도 얻을 수 있어요.</p>
 			<div class="pop_bottom_btns">
