--- a/03_mission/board_list_01.html
+++ b/03_mission/board_list_01.html
@@ -32,11 +32,11 @@
 		<section class="mission_board">
 			<div class="m_dashboard gap">
 				<div class="m_dashboard_title">
-					<h2>미션 대시보드<span class="count">1회차</span></h2>
+					<h2 id="m_05_01_1">미션 대시보드<span class="count" id="m_05_01_2">1회차</span></h2>
 					<!-- 2회차 이상 재방문시 노출 
 						<p class="revisit">다시 방문하셨군요?</p> 
 					-->
-					<p>Enjoy the Good Life Solution</p>
+					<p id="m_05_03_4">Enjoy the Good Life Solution</p>
 				</div>
 				<div class="m_stamp_list">
 					<!-- 미션 클리어시 img가 stamp_complete_01.svg ~ stamp_complete_05.svg 이미지로 바뀝니다. 바뀐 모습은 board_list_03.html 참고 부탁드립니다. -->
@@ -62,36 +62,36 @@
 			<div class="mission_box">
 				<a href="./01/about.html" id="mission01" class="mission gap">
 					<div class="text_wrap">
-						<h3>스타일러 시향 체험</h3>
-						<p>4가지 아로마 시트 중 나의 최애 향은?</p>
+						<h3 id="m_05_01_3">스타일러 시향 체험</h3>
+						<p id="m_05_01_4">4가지 아로마 시트 중 나의 최애 향은?</p>
 					</div>
 					<img src="../image/03_mission/stamp_mission_01.svg" alt="mission 01 - GF">
 				</a>
 				<a href="./02/about.html" id="mission02" class="mission gap">
 					<div class="text_wrap">
-						<h3>My Objet Color</h3>
-						<p>나만의 무드업 냉장고 컬러 조합은?</p>
+						<h3 id="m_05_01_5">My Objet Color</h3>
+						<p id="m_05_01_6">나만의 무드업 냉장고 컬러 조합은?</p>
 					</div>
 					<img src="../image/03_mission/stamp_mission_02.svg" alt="mission 02 - 1F">
 				</a>
 				<a href="./03/about.html" id="mission02" class="mission gap">
 					<div class="text_wrap">
-						<h3>오브제갤러리 제품 월드컵</h3>
-						<p>나의 원픽 오브제 컬렉션은?</p>
+						<h3 id="m_05_01_7">오브제갤러리 제품 월드컵</h3>
+						<p id="m_05_01_8">나의 원픽 오브제 컬렉션은?</p>
 					</div>
 					<img src="../image/03_mission/stamp_mission_03.svg" alt="mission 03 - 1F">
 				</a>
 				<a href="./04/about.html" id="mission02" class="mission gap">
 					<div class="text_wrap">
-						<h3>숨은 QR 찾기</h3>
-						<p>숨겨진 미니 제품들 사이 어디에 QR이?</p>
+						<h3 id="m_05_01_9">숨은 QR 찾기</h3>
+						<p id="m_05_01_10">숨겨진 미니 제품들 사이 어디에 QR이?</p>
 					</div>
 					<img src="../image/03_mission/stamp_mission_04.svg" alt="mission 04 - 3F">
 				</a>
 				<a href="./05/about.html" id="mission02" class="mission gap">
 					<div class="text_wrap">
-						<h3>SNS 공유하기</h3>
-						<p>가장 재미있게 즐기는 나의 모습은?</p>
+						<h3 id="m_05_01_11">SNS 공유하기</h3>
+						<p id="m_05_01_12">가장 재미있게 즐기는 나의 모습은?</p>
 					</div>
 					<img src="../image/03_mission/stamp_mission_05.svg" alt="mission 04 - 5F">
 				</a>
@@ -111,9 +111,9 @@
 	</div>
 	<!-- 하단 메뉴 -->
 	<ul class="bottom_gnb">
-		<li><a href="../02_info/info.html"><span class="bottom_icn1 bottom_icn"></span><span class="bottom_menutxt">Space Info</span></a></li>
-		<li><a href="../03_mission/board_list_01.html" class="active"><span class="bottom_icn2 bottom_icn"></span><span class="bottom_menutxt">Mission</span></a></li>
-		<li><a href="../04_event/list.html"><span class="bottom_icn3 bottom_icn"></span><span class="bottom_menutxt">Event</span></a></li>
+		<li><a href="../02_info/info.html"><span class="bottom_icn1 bottom_icn"></span><span class="bottom_menutxt" id="m_05_common_1">Space Info</span></a></li>
+		<li><a href="../03_mission/board_list_01.html" class="active"><span class="bottom_icn2 bottom_icn"></span><span class="bottom_menutxt" id="m_05_common_2">Mission</span></a></li>
+		<li><a href="../04_event/list.html"><span class="bottom_icn3 bottom_icn"></span><span class="bottom_menutxt" id="m_05_common_3">Event</span></a></li>
 	</ul>
 	<!-- 하단 메뉴 -->
 	<script>
