--- a/04_event/list.html
+++ b/04_event/list.html
@@ -29,42 +29,42 @@
 		</header>
 		<section class="event_list gap">
 			<div class="event_title">
-				<h2>진행중인 이벤트</h2>
+				<h2 id="ev_l_01">진행중인 이벤트</h2>
 			</div>
 			<div class="list_contents">
 				<a href="./view_01.html" class="slide">
 					<figure class="slide_img" style="background-image: url('../image/common/img_info_gf_01.png');"></figure>
 					<div class="slide_cont">
-						<h5>Another Saigon Challenge</h5>
-						<p class="event_date">0000.00.00~0000.00.00</p>
+						<h5 id="ev_l_02">Another Saigon Challenge</h5>
+						<p id="ev_l_03" class="event_date">0000.00.00~0000.00.00</p>
 					</div>
 				</a>
 				<a href="./view_01.html" class="slide">
 					<figure class="slide_img" style="background-image: url('../image/common/img_info_gf_01.png');"></figure>
 					<div class="slide_cont">
-						<h5>Another Saigon Selfie</h5>
-						<p class="event_date">0000.00.00~0000.00.00</p>
+						<h5 id="ev_l_04">Another Saigon Selfie</h5>
+						<p id="ev_l_05" class="event_date">0000.00.00~0000.00.00</p>
 					</div>
 				</a>
 				<a href="./view_02.html" class="slide">
 					<figure class="slide_img" style="background-image: url('../image/common/img_info_gf_01.png');"></figure>
 					<div class="slide_cont">
-						<h5>Membership Event on LG</h5>
-						<p class="event_date">0000.00.00~0000.00.00</p>
+						<h5 id="ev_l_06">Membership Event on LG</h5>
+						<p id="ev_l_07" class="event_date">0000.00.00~0000.00.00</p>
 					</div>
 				</a>
 				<a href="./view_03.html" class="slide">
 					<figure class="slide_img" style="background-image: url('../image/common/img_info_gf_01.png');"></figure>
 					<div class="slide_cont">
-						<h5>Better Life for All : ESG Workshop Event</h5>
-						<p class="event_date">0000.00.00~0000.00.00</p>
+						<h5 id="ev_l_08">Better Life for All : ESG Workshop Event</h5>
+						<p id="ev_l_09" class="event_date">0000.00.00~0000.00.00</p>
 					</div>
 				</a>
 				<a href="./view_03.html" class="slide">
 					<figure class="slide_img" style="background-image: url('../image/common/img_info_gf_01.png');"></figure>
 					<div class="slide_cont">
-						<h5>VNG Games : Valorant Team Match</h5>
-						<p class="event_date">0000.00.00~0000.00.00</p>
+						<h5 id="ev_l_10">VNGGames : Valorant Team Match</h5>
+						<p id="ev_l_11" class="event_date">0000.00.00~0000.00.00</p>
 					</div>
 				</a>
 			</div>
@@ -72,9 +72,9 @@
 	</div>
 	<!-- 하단 메뉴 -->
 	<ul class="bottom_gnb">
-		<li><a href="../02_info/info.html"><span class="bottom_icn1 bottom_icn"></span><span class="bottom_menutxt">Space Info</span></a></li>
-		<li><a href="../03_mission/board_list_01.html"><span class="bottom_icn2 bottom_icn"></span><span class="bottom_menutxt">Mission</span></a></li>
-		<li><a href="../04_event/list.html" class="active"><span class="bottom_icn3 bottom_icn"></span><span class="bottom_menutxt">Event</span></a></li>
+		<li><a href="../02_info/info.html"><span class="bottom_icn1 bottom_icn"></span><span class="bottom_menutxt" id="m_05_common_1">Space Info</span></a></li>
+		<li><a href="../03_mission/board_list_01.html" class="active"><span class="bottom_icn2 bottom_icn"></span><span class="bottom_menutxt" id="m_05_common_2">Mission</span></a></li>
+		<li><a href="../04_event/list.html"><span class="bottom_icn3 bottom_icn"></span><span class="bottom_menutxt" id="m_05_common_3">Event</span></a></li>
 	</ul>
 	<!-- 하단 메뉴 -->
 	
