--- a/04_event/password.html
+++ b/04_event/password.html
@@ -31,8 +31,8 @@
 		</header>
 		<section class="password_sec gap">
 			<div class="worldcup_title">
-				<h2>운영 스텝 체크</h2>
-				<p>운영 스텝이 확인을 위해 <br />
+				<h2 id="e_p_title">운영 스텝 체크</h2>
+				<p id="e_p_desc">운영 스텝이 확인을 위해 <br />
 					사용되는 기능입니다.</p>
 			</div>
 			<form action="">
