--- a/04_event/view_02.html
+++ b/04_event/view_02.html
@@ -31,8 +31,8 @@
 			</header>
 			<section class="event_view">
 				<div class="event_title gap">
-					<h2>Membership Event on LG</h2>
-					<p class="event_date">0000.00.00~0000.00.00</p>
+					<h2 id="ev_v_03">Membership Event on LG</h2>
+					<p id="ev_v_04" class="event_date">0000.00.00~0000.00.00</p>
 				</div>
 				<div class="view_contents">
 					<!-- 이곳에 관리자에서 올린 이벤트 내용이 올라옵니다. -->
