--- a/04_event/view_03.html
+++ b/04_event/view_03.html
@@ -31,8 +31,8 @@
 		</header>
 		<section class="event_view">
 			<div class="event_title gap">
-				<h2>Better Life for All : ESG Workshop Event</h2>
-				<p class="event_date">0000.00.00~0000.00.00</p>
+				<h2 id="ev_v_05">Better Life for All : ESG Workshop Event</h2>
+				<p id="ev_v_06" class="event_date">0000.00.00~0000.00.00</p>
 			</div>
 			<div class="view_contents">
 				<!-- 이곳에 관리자에서 올린 이벤트 내용이 올라옵니다. -->
@@ -43,11 +43,11 @@
 			<form action="">
 				<div class="gap">
 					<div class="input_block">
-						<label for="event_name">이름</label>
+						<label id="ev_v_name" for="event_name">이름</label>
 						<input type="text" name="event_name" id="event_name" placeholder="이름을 입력하세요." class="w100per">
 					</div>
 					<div class="input_block">
-						<label for="">이메일</label>
+						<label id="ev_v_mail" for="">이메일</label>
 						<div class="input_email_inner">
 							<input type="text" name="event_mail" id="event_mail1" placeholder="이메일">
 							@
