--- a/05_survey/about.html
+++ b/05_survey/about.html
@@ -29,8 +29,8 @@
 		</header>
 		<section class="survey_about gap">
 			<div class="about_title">
-				<h2>안녕하세요?</h2>
-				<p>귀하께서 경험하신 공간의 만족도 및<br />
+				<h2 id="s_a_01">안녕하세요?</h2>
+				<p id="s_a_02">귀하께서 경험하신 공간의 만족도 및<br />
 					LG의 이미지를 파악하기 위해 조사입니다.<br /><br />
 					
 					편하게 응답 부탁드립니다.<br />
