--- a/05_survey/password.html
+++ b/05_survey/password.html
@@ -31,8 +31,8 @@
 		</header>
 		<section class="password_sec gap">
 			<div class="worldcup_title">
-				<h2>운영 스텝 체크</h2>
-				<p>운영 스텝이 리워드 수령 확인을 위해<br />
+				<h2 id="s_p_title">운영 스텝 체크</h2>
+				<p id="s_p_desc">운영 스텝이 리워드 수령 확인을 위해<br />
 					사용되는 기능입니다.
 				</p>
 			</div>
