--- a/01_login/login_bg02.html
+++ b/01_login/login_bg02.html
@@ -55,9 +55,10 @@
 	<div id="splash_screen">
 		<div id="splash_custom">
 			<img id="splash_img01" src="../image/01_login/splash_01.svg" alt="Another Saigon by LG">
-				<h2 id="login_02">Enjoy the Good Life Solution</h2>
-				<p id="login_03">Connect to a better daily life where you can <br />
-					experience new taste of your dream</p>
+				<h2 id="login_01">Enjoy the Good Life Solution</h2>
+				<p id="login_02">Take one step forward from the ordinary to <br />
+					enjoy the Good Life with LG </p>
+				<p id="login_03">Say hello to Another Saigon</p>
 			<img id="splash_img02" src="../image/01_login/splash_02.svg" alt="Life's Good">
 		</div>
     </div>
@@ -70,18 +71,19 @@
 			</ul>
 		</header>
 		<div class="top_title">
-			<h1 id="login_01">
+			<h1 id="login_04">
 				Say Hello to
 				<img src="../image/common/logo_gate.svg" alt="Another Saigon by LG">
 			</h1>
 		</div>
 		<div class="bottom_content gap">
 			<div class="login_text">
-				<h2 id="login_02">Enjoy the Good Life Solution</h2>
-				<p id="login_03">Connect to a better daily life where you can <br />
-					experience new taste of your dream</p>
+				<h2 id="login_05">Enjoy the Good Life Solution</h2>
+				<p id="login_06">Take one step forward from the ordinary to <br />
+					enjoy the Good Life with LG </p>
+				<p id="login_07">Say hello to Another Saigon</p>
 			</div>
-			<div id="login_04" class="login_chat"><p>간편하게 시작하기</p></div>
+			<div class="login_chat"><p id="login_08">간편하게 시작하기</p></div>
 			<ul class="sns_login_b">
 				<li><a href="javascript:;" class="sns_facebook"><img src="../image/01_login/logo_facebook_w.svg" alt="facebook logo"></a></li>
 				<li><a href="javascript:;" class="sns_google"><img src="../image/01_login/logo_google_w.svg" alt="google logo"></a></li>
@@ -97,11 +99,11 @@
 	<div id="pop_policy" class="popup_wrap survey_pop">
 		<div class="pop_content gap">
 			<div class="title_area">
-				<h1 id="login_05">개인 정보 정책</h1>
+				<h1 id="login_09">개인 정보 정책</h1>
 			</div>
 			<button id="" onclick="popClose()" class="btn_pop_close">Close</button>
 			<div class="policy_wrap">
-				<p id="login_06">text text text text text text text text text text text text text text text text text text xt xt text text text text text text text text text t text text text text text text text text text ext text text text text text text text text text text text text text text text text text text text text text text text text text text xt xt text text text text text text text text text t text text text text text text text text text ext text text text text text text text text text text text text text text text text text text text text text text text text text text xt xt text text text text text text text text text t text text text text text text text text text ext text text text text text text text text text text text text text text text text text text text text text text text text text text xt xt text text text text text text text text text t text text text text text text text text text ext text text text text text text text text text text text text text text text text text text text text text text text text text text xt xt text text text text text text text text text t text text text text text text text text text text text text text text text text text text</p>
+				<p id="login_10">text text text text text text text text text text text text text text text text text text xt xt text text text text text text text text text t text text text text text text text text text ext text text text text text text text text text text text text text text text text text text text text text text text text text text xt xt text text text text text text text text text t text text text text text text text text text ext text text text text text text text text text text text text text text text text text text text text text text text text text text xt xt text text text text text text text text text t text text text text text text text text text ext text text text text text text text text text text text text text text text text text text text text text text text text text text xt xt text text text text text text text text text t text text text text text text text text text ext text text text text text text text text text text text text text text text text text text text text text text text text text text xt xt text text text text text text text text text t text text text text text text text text text text text text text text text text text text</p>
 			</div>
 		</div>
 	</div>
