--- a/02_info/info.html
+++ b/02_info/info.html
@@ -30,8 +30,8 @@
 		<section class="info_section gap">
 			<!-- info_top_wrap start -->
 			<div class="info_top_wrap">
-				<h2>Another Saigon_</h2>
-				<p>Just like Vietnam, ever changing and ever new, <br />
+				<h2 id="if_01">Another Saigon_</h2>
+				<p id="if_02">Just like Vietnam, ever changing and ever new, <br />
 					We welcome you to this very special space.
 					<br /><br />
 					Dare to dream of these life-changing moments. 
@@ -50,18 +50,18 @@
 			<!-- info_time_wrap start -->
 			<div class="info_time_wrap">
 				<div class="info_time_title">
-					<h3>운영시간</h3>
+					<h3 id="if_03">운영시간</h3>
 				</div>
 				<ul class="info_time_list">
-					<li>평일 : 14:00~22:00</li>
-					<li>주말(공휴일) : 10:00~22:00</li>
+					<li id="if_04">평일 : 14:00~22:00</li>
+					<li id="if_05">주말(공휴일) : 10:00~22:00</li>
 				</ul>
 			</div>
 			<!-- info_time_wrap end -->
 
 			<!-- info_sns_wrap start -->
 			<div class="info_sns_wrap">
-				<h3>소식 더 보기</h3>
+				<h3 id="if_06">소식 더 보기</h3>
 				<ul class="info_sns_list">
 					<li><a href="#"><img src="../image/02_info/icn_info_lg.svg" alt=""></a></li>
 					<li><a href="#"><img src="../image/02_info/icn_info_facebook.svg" alt=""></a></li>
@@ -75,36 +75,36 @@
 		<!-- info_floor_sec start -->
 		<section class="info_floor_sec pd_bottom">
 			<div class="info_floor_title gap">
-				<h3>층별 안내</h3>
+				<h3 id="if_07">층별 안내</h3>
 			</div>
 			<!-- floor g -->
 			<div class="floor_g floor">
-				<h4 class="gap">[GF] Hello, LG</h4>
+				<h4 class="gap"  id="if_08">[GF] Hello, LG</h4>
 				<div class="floor_g_slide floor_slide">
 					<!-- 내용은 추후 수정예정, 관리자에서 입력시 내용이 변경되는 기능 구현 필요합니다.
 					슬라이드 갯수에 따라 하단 바 길이가 늘어나는 스크립트는 아래 구현했습니다. -->
 					<div class="slide">
 						<figure class="slide_img" style="background-image: url('../image/02_info/img_info_gf_01.png');"></figure>
 						<div class="slide_cont">
-							<h5>Reception</h5>
-							<p>어나더 사이공에 오신 것을 환영합니다. GF부터 5F까지 새롭게 꿈꾸는 취향을 경험하고, 다양한 브랜드 콜라보를 만나보세요. 스탬프 미션과 이벤트에 참여해 굿즈도 수령할 수 있습니다.
+							<h5 id="if_09">Reception</h5>
+							<p id="if_10">어나더 사이공에 오신 것을 환영합니다. GF부터 5F까지 새롭게 꿈꾸는 취향을 경험하고, 다양한 브랜드 콜라보를 만나보세요. 스탬프 미션과 이벤트에 참여해 굿즈도 수령할 수 있습니다.
 							</p>
 						</div>
 					</div>
 					<div class="slide">
 						<figure class="slide_img" style="background-image: url('../image/02_info/img_info_gf_02.png');"></figure>
 						<div class="slide_cont">
-							<h5>Better Life for All</h5>
-							<p>환경과 취향까지 생각하는, 세상에 없던 가전! 스타일러와 슈케어로 입고 온 의류를 관리해보고, 더 나은 호치민의 환경을 위한 캠페인에 동참해주세요.</p>
+							<h5 id="if_11">Better Life for All</h5>
+							<p id="if_12">환경과 취향까지 생각하는, 세상에 없던 가전! 스타일러와 슈케어로 입고 온 의류를 관리해보고, 더 나은 호치민의 환경을 위한 캠페인에 동참해주세요.</p>
 						</div>
 					</div>
 					<div class="slide">
 						<figure class="slide_img" style="background-image: url('../image/02_info/img_info_gf_03.png');"><a href="https://thecoffeehouse.com/" target="_blank" id="link_gf_03" class="slide_link">LINK</a></figure>
 						<!-- 링크주소가 언어별로 달라집니다. -->
 						<div class="slide_cont">
-							<h5>The Coffee House </h5>
-							<h6>Good Friend #2</h6>
-							<p>THE COFFEE HOUSE enriches human connection via a cup of coffee.
+							<h5 id="if_13">The Coffee House </h5>
+							<h6 id="if_14">Good Friend #2</h6>
+							<p id="if_15">THE COFFEE HOUSE enriches human connection via a cup of coffee.
 								Life can become better and more beautiful, starting with healthier beverages.
 								We are grateful to everyone who came to make Better Choices with LG
 								</p>
@@ -114,23 +114,23 @@
 						<figure class="slide_img" style="background-image: url('../image/02_info/img_info_gf_04.png');"><a href="https://www.dongdongsaigon.com/en/" target="_blank" id="link_gf_04" class="slide_link">LINK</a></figure>
 						<!-- 링크주소가 언어별로 달라집니다. -->
 						<div class="slide_cont">
-							<h5>LG x Dong Dong</h5>
-							<h6>Good Friend #1</h6>
-							<p>Get ready for our collaboration with Dong Dong, bringing you fun, sustainable, and unique fashion accessories. Visit the Brand Zone to find out more.</p>
+							<h5 id="if_16">LG x Dong Dong</h5>
+							<h6 id="if_17">Good Friend #1</h6>
+							<p id="if_18">Get ready for our collaboration with Dong Dong, bringing you fun, sustainable, and unique fashion accessories. Visit the Brand Zone to find out more.</p>
 						</div>
 					</div>
 				</div>
 			</div>
 			<!-- floor 1 -->
 			<div class="floor_1 floor">
-				<h4 class="gap">[1F] The Friend for Good life</h4>
+				<h4 class="gap" id="if_19">[1F] The Friend for Good life</h4>
 				<div class="floor_1_slide floor_slide">
 					<div class="slide">
 						<figure class="slide_img" style="background-image: url('../image/02_info/img_info_1f_01.png');"></figure>
 						<div class="slide_cont">
-							<h5>Objet Collection</h5>
-							<h6>Good Life Curation</h6>
-							<p>가전, 꿈꾸던 삶이 되다 LG Objet Collection <br />
+							<h5 id="if_20">Objet Collection</h5>
+							<h6 id="if_21">Good Life Curation</h6>
+							<p id="if_22">가전, 꿈꾸던 삶이 되다 LG Objet Collection <br />
 								공간 인테리어를 위한 가전, 오브제 컬렉션을 소개합니다.
 							</p>
 						</div>
@@ -138,64 +138,64 @@
 					<div class="slide">
 						<figure class="slide_img" style="background-image: url('../image/02_info/img_info_1f_02.png');"></figure>
 						<div class="slide_cont">
-							<h5>My Objet Color</h5>
-							<p>직접 취향에 맞게 냉장고 패널 색상과 소재를 자유롭게 선택하고 조합해보세요.</p>
+							<h5 id="if_23">My Objet Color</h5>
+							<p id="if_24">직접 취향에 맞게 냉장고 패널 색상과 소재를 자유롭게 선택하고 조합해보세요.</p>
 						</div>
 					</div>
 					<div class="slide">
 						<figure class="slide_img" style="background-image: url('../image/02_info/img_info_1f_03.png');"></figure>
 						<div class="slide_cont">
-							<h5>My Objet House</h5>
-							<p>작고 귀여운 미니어쳐 오브제컬렉션으로 나만의 취향을 담아 가전테리어를 완성해보세요.</p>
+							<h5 id="if_25">My Objet House</h5>
+							<p id="if_26">작고 귀여운 미니어쳐 오브제컬렉션으로 나만의 취향을 담아 가전테리어를 완성해보세요.</p>
 						</div>
 					</div>
 					<div class="slide">
 						<figure class="slide_img" style="background-image: url('../image/02_info/img_info_1f_04.png');"><a href="https://vnggames.com/vn/en" target="_blank" id="link_1f_04" class="slide_link">LINK</a></figure>
 						<!-- 링크주소가 언어별로 달라집니다. -->
 						<div class="slide_cont">
-							<h5>VNG Games</h5>
-							<h6>Good Friend #3</h6>
-							<p>Come to experience one-of-a-kind gaming lounge with VALORANT in Another Saigon - your new check-in spot in town, held by LGE & VNG Games!</p>
+							<h5 id="if_27">VNGGames</h5>
+							<h6 id="if_28">Good Friend #3</h6>
+							<p id="if_29">Come to enjoy experience the trendiest FPS game title - VALORANT in the gaming lounge brought to you by VNGGames and LGE. Various exclusive gifts are waiting for you!</p>
 						</div>
 					</div>
 				</div>
 			</div>
 			<!-- floor 3 -->
 			<div class="floor_3 floor">
-				<h4 class="gap">[3F] The Solution of Good Life</h4>
+				<h4 class="gap" id="if_30">[3F] The Solution of Good Life</h4>
 				<div class="floor_3_slide floor_slide">
 					<div class="slide">
 						<figure class="slide_img" style="background-image: url('../image/02_info/img_info_3f_01.png');"></figure>
 						<div class="slide_cont">
-							<h5>Good Life Solution</h5>
-							<p>작고 귀여운 가전제품 미니어쳐들과 함께 전문적인 제품상담도 받아보고, 바우쳐도 받아보세요.</p>
+							<h5 id="if_31">Good Life Solution</h5>
+							<p id="if_32">작고 귀여운 가전제품 미니어쳐들과 함께 전문적인 제품상담도 받아보고, 바우쳐도 받아보세요.</p>
 						</div>
 					</div>
 					<div class="slide">
 						<figure class="slide_img" style="background-image: url('../image/02_info/img_info_3f_02.png');"></figure>
 						<div class="slide_cont">
-							<h5>Good Life Stories</h5>
-							<p>가전은 LG, LG전자와 가전을 움직이는 핵심 부품 3가지 코어테크를 만나보세요.</p>
+							<h5 id="if_33">Good Life Story</h5>
+							<p id="if_34">가전은 LG, LG전자와 가전을 움직이는 핵심 부품 3가지 코어테크를 만나보세요.</p>
 						</div>
 					</div>
 				</div>
 			</div>
 			<!-- floor 5 -->
 			<div class="floor_5 floor">
-				<h4 class="gap">[5F] The Joy of Good Life</h4>
+				<h4 class="gap" id="if_35">[5F] The Joy of Good Life</h4>
 				<div class="floor_5_slide floor_slide">
 					<div class="slide">
 						<figure class="slide_img" style="background-image: url('../image/02_info/img_info_5f_01.png');"></figure>
 						<div class="slide_cont">
-							<h5><img src="../image/02_info/img_info_moodup.svg" alt="Mood Up"> Stage</h5>
-							<p>터치 한번만으로 화려한 색감과 신나는 음악으로 분위기를 만들어주는 무드업 냉장고와 함께 댄스챌린지와 포토 인증샷도 남겨보세요.</p>
+							<h5 id="if_36"><img src="../image/02_info/img_info_moodup.svg" alt="Mood Up"> Stage</h5>
+							<p id="if_37">터치 한번만으로 화려한 색감과 신나는 음악으로 분위기를 만들어주는 무드업 냉장고와 함께 댄스챌린지와 포토 인증샷도 남겨보세요.</p>
 						</div>
 					</div>
 					<div class="slide">
 						<figure class="slide_img" style="background-image: url('../image/02_info/img_info_5f_02.png');"></figure>
 						<div class="slide_cont">
-							<h5><img src="../image/02_info/img_info_moodup.svg" alt="Mood Up"> Stage</h5>
-							<p>직접 무드업 컬러를 선택하며 냉장고 색상을 바꿔보세요.</p>
+							<h5 id="if_38"><img src="../image/02_info/img_info_moodup.svg" alt="Mood Up"> Stage</h5>
+							<p id="if_39">직접 무드업 컬러를 선택하며 냉장고 색상을 바꿔보세요.</p>
 						</div>
 					</div>
 				</div>
@@ -207,9 +207,9 @@
 	</div>
 	<!-- 하단 메뉴 -->
 	<ul class="bottom_gnb">
-		<li><a href="../02_info/info.html" class="active"><span class="bottom_icn1 bottom_icn"></span><span class="bottom_menutxt">Space Info</span></a></li>
-		<li><a href="../03_mission/board_list_01.html"><span class="bottom_icn2 bottom_icn"></span><span class="bottom_menutxt">Mission</span></a></li>
-		<li><a href="../04_event/list.html"><span class="bottom_icn3 bottom_icn"></span><span class="bottom_menutxt">Event</span></a></li>
+		<li><a href="../02_info/info.html"><span class="bottom_icn1 bottom_icn"></span><span class="bottom_menutxt" id="m_05_common_1">Space Info</span></a></li>
+		<li><a href="../03_mission/board_list_01.html" class="active"><span class="bottom_icn2 bottom_icn"></span><span class="bottom_menutxt" id="m_05_common_2">Mission</span></a></li>
+		<li><a href="../04_event/list.html"><span class="bottom_icn3 bottom_icn"></span><span class="bottom_menutxt" id="m_05_common_3">Event</span></a></li>
 	</ul>
 	<!-- 하단 메뉴 -->
 	<script>
