--- a/03_mission/03/worldcup02.html
+++ b/03_mission/03/worldcup02.html
@@ -29,45 +29,44 @@
 		</header>
 		<section class="worldcup_sec gap">
 			<div class="worldcup_title">
-				<h2>18강</h2>
-				<b>1/9</b>
-				<p>어떤 가전이 나의 취향인지 선택해주세요.</p>
+				<h2 id="m03_s_001">18강</h2>
+				<b id="m03_s_002">1/9</b>
+				<p id="m03_s_003">어떤 가전이 나의 취향인지 선택해주세요.</p>
 			</div>
 			<div class="worldcup_list">
-				<button onclick="" class="worldcup_item active_toggle">
-					<span class="img_wrap"><img src="../../image/03_mission/img_worldcup_01.png" alt="LG Styler image"></span>
+				<button id="m03_item_18" type="button" onclick="popupOpen('m03_scan_clear_img_18')" ontouchstart="popupOpen('m03_scan_clear_img_18')" class="worldcup_item active_toggle">
+					<span class="img_wrap"><img src="../../image/03_mission/img_18_LG_Styler.png" alt="LG Styler"></span>
 					<span class="txt_wrap">
-						<h3>LG Styler</h3>
-						<p>매번 세탁소에 가지 않아도<br />
+						<h3 id="m03_s_048">LG Styler</h3>
+						<p id="m03_s_049">매번 세탁소에 가지 않아도<br />
 							깔끔하고 우아한 스타일</p>
 					</span>
 				</button>
-				<button onclick="" class="active worldcup_item active_toggle">
-					<span class="img_wrap"><img src="../../image/03_mission/img_worldcup_02.png" alt="LG Tiiun image"></span>
+				<button id="m03_item_14" type="button" onclick="popupOpen('m03_scan_clear_img_14')" ontouchstart="popupOpen('m03_scan_clear_img_14')" class="worldcup_item active_toggle">
+					<span class="img_wrap"><img src="../../image/03_mission/img_14_LG_Tiiun.png" alt=""></span>
 					<span class="txt_wrap">
-						<h3>LG Tiiun</h3>
-						<p>쉽게 키우는<br />
+						<h3 id="m03_s_037">LG Tiiun</h3>
+						<p id="m03_s_038">쉽게 키우는<br />
 							나만의 작은 정원</p>
-						<span class="minitxt">*출시예정</span>
+						<span id="m03_s_039" class="minitxt">*출시예정</span>
 					</span>
 				</button>
 			</div>
-			<!-- 월드컵 완료시 노출 팝업 -->
-			<div id="m03_scan_clear" class="popup_wrap blur_pop" style="display: flex;">
-				<div class="blur_bg active"></div>
+			<!-- 월드컵 완료시 노출 팝업 14 -->
+			<div id="m03_scan_clear_img_14" class="popup_wrap blur_pop">
+				<div class="blur_bg"></div>
 				<div class="pop_content">
-					<div class="mission_clear"><img src="../../image/common/icn_mission_s.svg" alt="">Clear!</div>
-					<h2>나의 픽 가전은 LG Tiiun 입니다!</h2>
-					<p>여러분의 의견을 바탕으로 <br />
+					<div id="m03_s_102" class="mission_clear"><img src="../../image/common/icn_mission_s.svg" alt="">Clear!</div>
+					<h2 id="m03_s_103">나의 픽 가전은 LG Tiiun 입니다!</h2>
+					<p id="m03_s_104">여러분의 의견을 바탕으로 <br />
 						새로운 제품이 론칭될 예정이에요.</p>
-					<p>LG Tiiun은 자동 재배 시스템으로 초간편 홈가드닝이 <br />
-						가능한 플랜테리어 아이템 입니다.</p>
+					<p id="m03_s_105">LG Tiiun은 자동 재배 시스템으로 초간편 홈가드닝이 가능한 플랜테리어 아이템 입니다.</p>
 					<div class="pop_bottom_btns">
-						<button onclick="location.href='../board_list_02.html'" id="btn_m03_close" class="ok_circle btn_pop_circle">닫기</button>
+						<button onclick="popClose()" id="btn_m03_img_14_close" class="ok_circle btn_pop_circle">닫기</button>
 					</div>
 				</div>
 			</div>
-			<!-- 팝업 end -->
+			<!-- 팝업 14 end -->
 		</section>
 	</div>
 </body>
