--- a/03_mission/05/about.html
+++ b/03_mission/05/about.html
@@ -29,28 +29,28 @@
 		</header>
 		<section class="mission_about gap">
 			<div class="about_title">
-				<div class="about_floor">5F</div>
-				<h2>SNS 공유하기</h2>
-				<p>무드업 스테이지에서 챌린지에 참여하고 필수 해시태그와 함께 SNS에 업로드해주세요. 운영 스텝이 확인 후 CLEAR 코드를 입력해드립니다.</p>
+				<div class="about_floor" id="m_05_a_1">5F</div>
+				<h2 id="m_05_a_2">SNS 공유하기</h2>
+				<p id="m_05_a_3">무드업 스테이지에서 챌린지에 참여하고 필수 해시태그와 함께 SNS에 업로드해주세요. 운영 스텝이 확인 후 CLEAR 코드를 입력해드립니다.</p>
 			</div>
 			<!-- m05_wrap -->
 			<div class="m05_wrap">
 				<a href=""><img src="../../image/03_mission/m05_tictok.png" alt="틱톡 챌린지 상세 보기"></a>
 				<div class="m05_hashtag">
-					<p><b>#AnotherLife</b><b>#Anothersigon</b><b>#LG</b><b>#AnotherSaigonChallenge</b></p>
+					<p><b id="m_05_a_4">#AnotherLife</b><b id="m_05_a_5">#Anothersigon</b><b id="m_05_a_6">#LG</b><b id="m_05_a_7">#AnotherSaigonChallenge</b></p>
 					<button onclick="popupToastOpen()" id="m05_tictok">해시태그 복사하기</button>
 				</div>
-				<p class="m05_minitxt">Tip. 해시태그를 틱톡에서 검색해보세요!</p>
+				<p class="m05_minitxt" id="m_05_a_8">Tip. 해시태그를 틱톡에서 검색해보세요!</p>
 				<div class="about_howto">
-					<h3>체험방법</h3>
+					<h3 id="m_05_a_9">체험방법</h3>
 					<ul>
 						<li>
 							<div class="img_wrap">
 								<img src="../../image/03_mission/m05_step01.png" alt="mission 5 tictok step 1">
 							</div>
 							<div class="about_step">
-								<h4>STEP. 1</h4>
-								<p>챌린지 촬영 스팟을 확인하고 핸드폰을 거치대에 셋팅하세요.</p>
+								<h4 id="m_05_a_10">STEP. 1</h4>
+								<p id="m_05_a_11">챌린지 촬영 스팟을 확인하고 핸드폰을 거치대에 셋팅하세요.</p>
 							</div>
 						</li>
 						<li>
@@ -58,8 +58,8 @@
 								<img src="../../image/03_mission/m05_step02.png" alt="mission 5 tictok step 2">
 							</div>
 							<div class="about_step">
-								<h4>STEP. 2</h4>
-								<p>리허설을 거친 후 <br />
+								<h4 id="m_05_a_12">STEP. 2</h4>
+								<p id="m_05_a_13">리허설을 거친 후 <br />
 									챌린지 촬영을 진행하세요.</p>
 							</div>
 						</li>
@@ -68,8 +68,8 @@
 								<img src="../../image/03_mission/m05_step03.png" alt="mission 5 tictok step 3">
 							</div>
 							<div class="about_step">
-								<h4>STEP. 3</h4>
-								<p>틱톡에 필수 해시태그를 포함하여<br />
+								<h4 id="m_05_a_14">STEP. 3</h4>
+								<p id="m_05_a_15">틱톡에 필수 해시태그를 포함하여<br />
 									업로드하세요.</p>
 							</div>
 						</li>
@@ -78,8 +78,8 @@
 								<img src="../../image/03_mission/m05_step04.png" alt="mission 5 tictok step 4">
 							</div>
 							<div class="about_step">
-								<h4>STEP. 4</h4>
-								<p>업로드를 마치고, 게시물을<br />
+								<h4 id="m_05_a_16">STEP. 4</h4>
+								<p id="m_05_a_17">업로드를 마치고, 게시물을<br />
 									운영 스텝에게 인증해주세요.</p>
 							</div>
 						</li>
@@ -91,19 +91,19 @@
 			<div class="m05_wrap">
 				<a href=""><img src="../../image/03_mission/m05_facebook.png" alt="페이스북 챌린지 상세 보기"></a>
 				<div class="m05_hashtag">
-					<p><b>#AnotherLife</b><b>#Anothersigon</b><b>#LG</b><b>#AnotherSaigonSelfie</b></p>
+					<p><b id="m_05_a_18">#AnotherLife</b><b id="m_05_a_19">#Anothersigon</b><b id="m_05_a_20">#LG</b><b id="m_05_a_21">#AnotherSaigonSelfie</b></p>
 					<button onclick="popupToastOpen()" id="m05_facebook">해시태그 복사하기</button>
 				</div>
 				<div class="about_howto">
-					<h3>체험방법</h3>
+					<h3 id="m_05_a_22">체험방법</h3>
 					<ul>
 						<li>
 							<div class="img_wrap">
 								<img src="../../image/03_mission/m05_step05.png" alt="mission 5 facebook step 1">
 							</div>
 							<div class="about_step">
-								<h4>STEP. 1</h4>
-								<p>챌린지 촬영 스팟을 확인하고 핸드폰을 거치대에 셋팅하세요.</p>
+								<h4 id="m_05_a_23">STEP. 1</h4>
+								<p id="m_05_a_24">챌린지 촬영 스팟을 확인하고 핸드폰을 거치대에 셋팅하세요.</p>
 							</div>
 						</li>
 						<li>
@@ -111,8 +111,8 @@
 								<img src="../../image/03_mission/m05_step06.png" alt="mission 5 facebook step 2">
 							</div>
 							<div class="about_step">
-								<h4>STEP. 2</h4>
-								<p>리허설을 거친 후 <br />
+								<h4 id="m_05_a_25">STEP. 2</h4>
+								<p id="m_05_a_26">리허설을 거친 후 <br />
 									챌린지 촬영을 진행하세요.</p>
 							</div>
 						</li>
@@ -121,8 +121,8 @@
 								<img src="../../image/03_mission/m05_step07.png" alt="mission 5 facebook step 3">
 							</div>
 							<div class="about_step">
-								<h4>STEP. 3</h4>
-								<p>페이스북에 필수 해시태그를<br />
+								<h4 id="m_05_a_27">STEP. 3</h4>
+								<p id="m_05_a_28">페이스북에 필수 해시태그를<br />
 									포함하여 업로드하세요.</p>
 							</div>
 						</li>
@@ -131,8 +131,8 @@
 								<img src="../../image/03_mission/m05_step08.png" alt="mission 5 facebook step 4">
 							</div>
 							<div class="about_step">
-								<h4>STEP. 4</h4>
-								<p>업로드를 마치고, 게시물을<br />
+								<h4 id="m_05_a_29">STEP. 4</h4>
+								<p id="m_05_a_30">업로드를 마치고, 게시물을<br />
 									운영 스텝에게 인증해주세요.</p>
 							</div>
 						</li>
@@ -144,7 +144,7 @@
 		</section>
 		<div id="popupToast1" class="popupToast_wrap">
 			<div class="popupToast">
-				<p class="popupToast_text">해시태그가 복사되었습니다.</p>
+				<p class="popupToast_text" id="m_05_a_31">해시태그가 복사되었습니다.</p>
 			</div>
 		</div>
 	</div>
