--- a/03_mission/05/password_ok.html
+++ b/03_mission/05/password_ok.html
@@ -31,8 +31,8 @@
 		</header>
 		<section class="password_sec gap">
 			<div class="worldcup_title">
-				<h2>운영 스텝 체크</h2>
-				<p>운영 스텝이 SNS 업로드 확인 후<br />
+				<h2 id="m_05_p_title">운영 스텝 체크</h2>
+				<p id="m_05_p_desc">운영 스텝이 SNS 업로드 확인 후<br />
 					미션 CLEAR를 위해 사용되는 기능입니다.</p>
 			</div>
 			<form action="">
@@ -49,8 +49,8 @@
 		<div id="m05_scan_clear" class="popup_wrap blur_pop" style="display: flex;">
 			<div class="blur_bg active"></div>
 			<div class="pop_content">
-				<div class="mission_clear"><img src="../../image/common/icn_mission_s.svg" alt="">Clear!</div>
-				<p>어나더사이공 챌린지는 틱톡 온라인에서 진행 되며,<br />
+				<div id="m_05_p_clear" class="mission_clear"><img src="../../image/common/icn_mission_s.svg" alt="">Clear!</div>
+				<p id="m_05_p_1">어나더사이공 챌린지는 틱톡 온라인에서 진행 되며,<br />
 					추후 추첨을 통해 다양한 LG 가전제품 당첨의 기회도<br />
 					가져보세요.</p>
 				<div class="pop_bottom_btns">
