--- a/03_mission/board_list_03.html
+++ b/03_mission/board_list_03.html
@@ -32,10 +32,10 @@
 		<section class="mission_board">
 			<div class="m_dashboard gap">
 				<div class="m_dashboard_title">
-					<h2>미션 대시보드<span class="count">5회차</span></h2>
+					<h2 id="m_05_03_1">미션 대시보드<span class="count" id="m_05_03_2">5회차</span></h2>
 					<!-- 2회차 이상 재방문시 노출 -->
-					<p class="revisit">다시 방문하셨군요?</p> 
-					<p>Enjoy the Good Life Solution</p>
+					<p class="revisit"  id="m_05_03_3">다시 방문하셨군요?</p> 
+					<p id="m_05_03_4">Enjoy the Good Life Solution</p>
 				</div>
 				<div class="m_stamp_list">
 					<!-- 미션 클리어시 바뀐 이미지입니다. -->
@@ -60,43 +60,43 @@
 				<!-- 미션 완료된 미션들입니다. -->
 				<div id="mission01" class="mission_complate mission gap">
 					<div class="text_wrap">
-						<h3>스타일러 시향 체험</h3>
-						<p>4가지 아로마 시트 중 나의 최애 향은?</p>
+						<h3  id="m_05_03_5">스타일러 시향 체험</h3>
+						<p  id="m_05_03_6">4가지 아로마 시트 중 나의 최애 향은?</p>
 					</div>
 					<img src="../image/03_mission/stamp_mission_01.svg" alt="">
-					<div class="clear"><h3>Clear!</h3></div>
+					<div class="clear"><h3 id="m_05_03_7">Clear!</h3></div>
 				</div>
 				<div id="mission02" class="mission_complate mission gap">
 					<div class="text_wrap">
-						<h3>My Objet Color</h3>
-						<p>나만의 무드업 냉장고 컬러 조합은?</p>
+						<h3  id="m_05_03_8">My Objet Color</h3>
+						<p  id="m_05_03_9">나만의 무드업 냉장고 컬러 조합은?</p>
 					</div>
 					<img src="../image/03_mission/stamp_mission_02.svg" alt="">
-					<div class="clear"><h3>Clear!</h3></div>
+					<div class="clear"><h3  id="m_05_03_10">Clear!</h3></div>
 				</div>
 				<div id="mission03" class="mission_complate mission gap">
 					<div class="text_wrap">
-						<h3>오브제갤러리 제품 월드컵</h3>
-						<p>나의 원픽 오브제 컬렉션은?</p>
+						<h3  id="m_05_03_11">오브제갤러리 제품 월드컵</h3>
+						<p  id="m_05_03_12">나의 원픽 오브제 컬렉션은?</p>
 					</div>
 					<img src="../image/03_mission/stamp_mission_03.svg" alt="">
-					<div class="clear"><h3>Clear!</h3></div>
+					<div class="clear"><h3 id="m_05_03_13">Clear!</h3></div>
 				</div>
 				<div id="mission04" class="mission_complate mission gap">
 					<div class="text_wrap">
-						<h3>숨은 QR 찾기</h3>
-						<p>숨겨진 미니 제품들 사이 어디에 QR이?</p>
+						<h3  id="m_05_03_14">숨은 QR 찾기</h3>
+						<p  id="m_05_03_15">숨겨진 미니 제품들 사이 어디에 QR이?</p>
 					</div>
 					<img src="../image/03_mission/stamp_mission_04.svg" alt="">
-					<div class="clear"><h3>Clear!</h3></div>
+					<div class="clear"><h3 id="m_05_03_16">Clear!</h3></div>
 				</div>
 				<div id="mission05" class="mission_complate mission gap">
 					<div class="text_wrap">
-						<h3>SNS 공유하기</h3>
-						<p>가장 재미있게 즐기는 나의 모습은?</p>
+						<h3  id="m_05_03_17">SNS 공유하기</h3>
+						<p  id="m_05_03_18">가장 재미있게 즐기는 나의 모습은?</p>
 					</div>
 					<img src="../image/03_mission/stamp_mission_05.svg" alt="">
-					<div class="clear"><h3>Clear!</h3></div>
+					<div class="clear"><h3 id="m_05_03_19">Clear!</h3></div>
 				</div>
 			</div>
 			<!-- 미션 및 서베이까지 다 하면 생기는 버튼입니다.
@@ -119,9 +119,9 @@
 	</div>
 	<!-- 하단 메뉴 -->
 	<ul class="bottom_gnb">
-		<li><a href="../02_info/info.html"><span class="bottom_icn1 bottom_icn"></span><span class="bottom_menutxt">Space Info</span></a></li>
-		<li><a href="../03_mission/board_list_01.html" class="active"><span class="bottom_icn2 bottom_icn"></span><span class="bottom_menutxt">Mission</span></a></li>
-		<li><a href="../04_event/list.html"><span class="bottom_icn3 bottom_icn"></span><span class="bottom_menutxt">Event</span></a></li>
+		<li><a href="../02_info/info.html"><span class="bottom_icn1 bottom_icn"></span><span class="bottom_menutxt"  id="m_05_common_1">Space Info</span></a></li>
+		<li><a href="../03_mission/board_list_01.html" class="active"><span class="bottom_icn2 bottom_icn"></span><span class="bottom_menutxt"  id="m_05_common_2">Mission</span></a></li>
+		<li><a href="../04_event/list.html"><span class="bottom_icn3 bottom_icn"></span><span class="bottom_menutxt"  id="m_05_common_3">Event</span></a></li>
 	</ul>
 	<!-- 하단 메뉴 -->
 	<script>
