--- a/04_event/password_ok.html
+++ b/04_event/password_ok.html
@@ -31,8 +31,8 @@
 		</header>
 		<section class="password_sec gap">
 			<div class="worldcup_title">
-				<h2>운영 스텝 체크</h2>
-				<p>운영 스텝이 확인을 위해 <br />
+				<h2 id="e_p_title">운영 스텝 체크</h2>
+				<p id="e_p_desc">운영 스텝이 확인을 위해 <br />
 					사용되는 기능입니다.</p>
 			</div>
 			<form action="">
@@ -49,7 +49,7 @@
 		<div id="m05_scan_clear" class="popup_wrap blur_pop" style="display: flex;">
 			<div class="blur_bg active"></div>
 			<div class="pop_content">
-				<h2>리워드 증정이 확인되었습니다.</h2>
+				<h2 id="e_p_reward">리워드 증정이 확인되었습니다.</h2>
 				<div class="pop_bottom_btns">
 					<button onclick="location.href='./view_02.html'" id="btn_event_close" class="ok_circle btn_pop_circle">닫기</button>
 				</div>
