--- a/05_survey/password_no.html
+++ b/05_survey/password_no.html
@@ -31,8 +31,8 @@
 		</header>
 		<section class="password_sec gap">
 			<div class="worldcup_title">
-				<h2>운영 스텝 체크</h2>
-				<p>운영 스텝이 리워드 수령 확인을 위해<br />
+				<h2 id="s_p_title">운영 스텝 체크</h2>
+				<p id="s_p_desc">운영 스텝이 리워드 수령 확인을 위해<br />
 					사용되는 기능입니다.
 				</p>
 			</div>
@@ -44,7 +44,7 @@
 					<input type="password" inputmode="numeric" pattern="[0-9]*" maxlength='1' name="password3" id="m05_password_03">
 					<input type="password" inputmode="numeric" pattern="[0-9]*" maxlength='1' name="password4" id="m05_password_04">
 				</div>
-				<p class="password_no_txt">*해당 기능은 운영 스텝만 사용 가능합니다.</p>
+				<p class="password_no_txt" id="s_p_step">*해당 기능은 운영 스텝만 사용 가능합니다.</p>
 			</form>
 		</section>
 	</div>
