--- a/05_survey/password_ok.html
+++ b/05_survey/password_ok.html
@@ -31,8 +31,8 @@
 		</header>
 		<section class="password_sec gap">
 			<div class="worldcup_title">
-				<h2>운영 스텝 체크</h2>
-				<p>운영 스텝이 리워드 수령 확인을 위해<br />
+				<h2 id="s_p_title">운영 스텝 체크</h2>
+				<p id="s_p_desc">운영 스텝이 리워드 수령 확인을 위해<br />
 					사용되는 기능입니다.
 				</p>
 			</div>
@@ -50,7 +50,7 @@
 		<div id="06_survey_clear" class="popup_wrap blur_pop" style="display: flex;">
 			<div class="blur_bg active"></div>
 			<div class="pop_content">
-				<h2>리워드 증정이 확인되었습니다.</h2>
+				<h2 id="s_p_reward">리워드 증정이 확인되었습니다.</h2>
 				<div class="pop_bottom_btns">
 					<button onclick="location.href='../03_mission/board_list_04.html'" id="btn_survey_close" class="ok_circle btn_pop_circle">닫기</button>
 				</div>
